css/styles.css
/* ... */
@media only screen and (max-width: 950px) {
    .use-item-section {
        flex-direction: column-reverse;
        margin: 0rem;
    }
    .use__list__sec {
        margin: 0;
        text-align: center;
        max-width: 100%;
    }
    .use-feature-list li::before {
        content: none;
    }
    .first__app__cta {
        flex-direction: row;
        justify-content: center;
        flex-basis: inherit;
        margin-top: 4rem;
    }
    .first__app__cta .first__app_btn:first-of-type {
        margin-right: 1rem;
    }
    .page-home .content-top {
        padding: 0 2rem;
        margin-top: 10rem;
    }
    .page-home .waves {
        min-height: 24rem;
        background-size: 950px auto;
    }
    .header {
        box-sizing: border-box;
        position: fixed;
        top: 0;
        left: 0;
        height: 8rem;
        padding: 1.5rem;
        z-index: 99;
        text-align: center;
        display: block;
        background-color: rgba(255, 255, 255, 0.9);
        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.38);
    }
    .content {
        padding-top: 10rem; /* Accounts for fixed header */
    }
    .page-home .content-home {
        padding-top: 4rem;
    }
    .logo {
        width: auto;
        height: 5rem;
    }
    .top-nav-toggle {
        display: inline-block;
        position: absolute;
        left: 1rem;
        margin: 0.5rem;
    }
    .top-nav-toggle + .top-nav-container {
        pointer-events: none;
        position: absolute;
        display: block;
        text-align: left;
        opacity: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100vw;
        height: 100vh;
        top: 8rem;
        z-index: 99;
        background: rgba(255, 255, 255, 0.95);
        transition: all 0.35s;
    }
    .top-nav-toggle + .top-nav-container .top-nav {
        margin-top: 0;
        transition: all 0.35s;
    }
    .top-nav-toggle.active + .top-nav-container {
        pointer-events: all;
        opacity: 1;
    }
    .top-nav-toggle.active + .top-nav-container .top-nav {
        margin-top: 1rem;
    }
    .top-nav {
        padding: 0.8rem 2.2rem;
        margin-top: 0;
    }
    .top-nav-item {
        margin-bottom: 1rem;
        display: block;
    }
    .top-nav-list,
    .top-nav-menu {
        width: 100%;
        position: static;
        display: block;
        box-shadow: none;
        background: none;
        transform: none;
        left: 0;
        text-align: left;
    }
    .top-nav-menu {
        margin-left: 2rem;
    }
    .top-nav-item-anchor,
    .top-nav-anchor {
        width: auto;
        text-align: left;
        padding: 0.8rem 0;
        font-size: 1.4rem;
        font-weight: 400;
        padding-left: 1rem;
    }
    .top-nav-download {
        width: 78vw;
        max-width: 30rem;
        text-align: center;
        margin: 3rem auto 0;
        display: block;
    }
}
@media only screen and (max-width: 800px) {
    .first__app__cta .first__app_btn {
        font-size: 1.5rem;
        font-weight: 400;
        height: auto;
    }
    .page-home .content-bottom {
        padding-top: 1rem;
    }
    .page-home .content-bottom .content-section-item {
        width: 47vw;
        padding: 3vw;
    }
    .page-home .content-bottom .content-section-title {
        margin-left: auto;
        margin-right: auto;
        width: 97vw;
        padding-left: 3vw;
    }
}
@media only screen and (max-width: 460px) {
    .use-item-section {
        margin-bottom: 0;
    }
    .use-feature-list li {
        line-height: 2.2rem;
    }
    .use-feature-list li:before {
        height: 2rem;
        width: 2rem;
    }
    .page-home .content-top-industry-list {
        flex-wrap: wrap;
        justify-content: space-around;
    }
    .page-home .content-top-industry-item {
        margin: 2rem 4rem;
    }
    .page-home .content-top-industry {
        max-width: 26rem;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 2rem;
    }
    .page-home .content-bottom .content-section-list {
        justify-content: space-around;
    }
    .page-home .content-bottom .content-section-item {
        margin-left: 2vw;
        margin-right: 2vw;
        margin-bottom: 3rem;
        width: 80vw;
        height: auto;
    }
    .page-home .content-bottom .content-section-title {
        margin-left: auto;
        margin-right: auto;
        width: 80vw;
    }
}
@media only screen and (max-width: 390px) {
    .first__app__cta {
        flex-direction: column;
    }
    .first__app__cta .first__app_btn {
        width: 100%;
    }
    .first__app__cta .first__app_btn:first-of-type {
        margin-right: 0;
    }
}
@media only screen and (max-width: 1125px) {
    .video__text {
        display: none;
    }
    .video__list {
        margin: 0 auto;
        width: 200px;
        padding-top: 20px;
        text-align: center;
    }
    .video__item {
        display: inline-block;
    }
    iframe {
        width: 100%;
    }
    .sticky-top{
        overflow-x:scroll;
    }
    .video__block h3 {
        display: none;
    }
    .video-list {
        display: none;
    }
}
@media only screen and (min-width: 1126px) {
    .customers__grid {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
        max-width: 92rem;
    }
    .sticky-top{
        overflow-x:hidden;
    }
}

/* Utilities */
.visually-hidden { 
    position: absolute !important;
    height: 1px; 
    width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
    clip: rect(1px, 1px, 1px, 1px);
    white-space: nowrap; /* added line */
}

